css/stylesheet.css
body {
  margin: 20px;
  padding: 20px;
  font-size: 18px;
}

* {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

h1 {
  font-family:Baskerville,Times,'Times New Roman',serif;
  font-size:50px;
  color:#589017;
  font-variant:small-caps;
  font-weight:bold;
  margin-bottom: 20px;
  margin-top: 0px;
  padding:0px 0px 0px 0px; /* Tweak this to your liking */
  }

#wrapper {
  width: 100%;
  max-width: 1140px;
  margin: 0 auto;
  padding: 0 20px;
}

#note-editor {
  padding-bottom: 12px;
  margin-bottom: 48px;
  border-bottom: 1px solid rgba(0,0,0,0.2);
  opacity: 1;
  transition: all 0.25s ease-out;
}

#note-editor.hide {
  opacity: 0;
}

textarea {
  font-size: 16px;
  display: block;
  margin-top: 15px;
  margin-bottom: 15px;
  padding: 8px 6px;
}

textarea.is-empty {
  border: 1px solid tomato;
}

button {
  position: relative;
  display: block;
  width: 100px;
  margin-top: 20px;
  padding: 12px 8px;
  border-radius: 5px;
  margin-bottom:50px;
  outline: none;
  border:0;
  box-shadow: 1px 1px 2px rgba(0,0,0,0.3);
  background: #589017;
  color: white;
  font-size: 14px;
}

button:active {
  box-shadow: 0px 0px 1px rgba(0,0,0,0.1);
  top: 1px;
  left: 1px;
}

#notes li {
  position: relative;
  list-style-type: disc;
  display: block;
  float: left;
  width: 340px;
  height: 250px;
  padding: 8px 12px;
  border-radius: 5px;
  margin: 0 5px 12px;
}

